# koyunkapan

./: .dockerignore  .gitignore  Dockerfile  README.md  db-migrate.sh  docker-compose.yml  koyunkapan-bot.service  koyunkapan-dashboard.service  praw.ini.example  pyproject.toml  start.sh
.github/workflows/: deploy.yml
src/koyunkapan/bot/: configs.py  core.py  database.py  logger.py  models.py  utils.py
src/koyunkapan/dashboard/: main.py  views.py
src/koyunkapan/dashboard/static/: style.css
src/koyunkapan/dashboard/templates/: base.html  index.html
